Fix css spacing on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -171,7 +171,7 @@ footer {
 		margin-top: 40px;
 		}
 	.wrapper {
-		top: 0;
+		top: 50px;
 		position: absolute;
 		background-size: 95%;
 		background-position-y: 20px;
